[Edit] : add Function send Mail and SFTP

--- a/IPA_GenerateReportExcel_Health/App.config
+++ b/IPA_GenerateReportExcel_Health/App.config
@@ -5,6 +5,6 @@
     </startup>
 	<appSettings>
 		<add key="Db_r4ad01" value="Data Source=r4ad01;Initial Catalog=miscdb;User ID=glconnect;Password=ledger;TrustServerCertificate=true;" />
-		<add key="PathFile" value="D:\Project_FileTest\IPA\" />
+		<add key="Type" value="Health" />
 	</appSettings>
 </configuration>
