--- a/IPA_GenerateReportExcel_Health/packages.config
+++ b/IPA_GenerateReportExcel_Health/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="GemBox.Spreadsheet" version="49.0.1379" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="SSH.NET" version="2020.0.2" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net472" />
