[Edit] : Create Log

--- a/IPA_GenerateReportExcel_Health/App.config
+++ b/IPA_GenerateReportExcel_Health/App.config
@@ -5,6 +5,7 @@
     </startup>
 	<appSettings>
 		<add key="Db_r4ad01" value="Data Source=r4ad01;Initial Catalog=miscdb;User ID=glconnect;Password=ledger;TrustServerCertificate=true;" />
+		<add key="Db_Log" value="Data Source=HQCDBAPIDEV;Initial Catalog=ViriyahAPI_DB;User ID=Wsadmindev;Password=AdMinDev@2565;TrustServerCertificate=true;" />
 		<add key="Type" value="Health" />
 	</appSettings>
 </configuration>
